# fastapi-rbac-template

./: .env.example  Makefile  README.md  config.py  main.py  pyproject.toml
.claude/: settings.local.json
api/: __init__.py  auth.py  operation_log.py  permission.py  role.py  user.py  user_role.py
controllers/: operation_log.py  permission.py  rbac.py  role.py  user.py  user_role.py
core/: crud.py  deps.py  redis_manager.py
models/: _base.py  operation_log.py  role.py  user.py
schemas/: auth.py  operation_log.py  page.py  rbac.py
scripts/: init_rbac.py
utils/: auto_log.py  common.py  exception.py  jwt_utils.py  operation_logger.py  rbac.py  smart_log.py
